@@ -706,4 +706,4 @@ table.insert(tests, "test_a_merge_8")
 table.insert(tests, "merge_into_workspace")
 table.insert(tests, "merge_into_workspace_no_changes")
 table.insert(tests, "merge_into_workspace_files_added")
-table.insert(tests, "merge_into_workspace_attr_corpse")
+table.insert(tests, "merge_into_workspace_same_rev")
