@@ -1,3 +1,10 @@
+2007-02-07  Matthew Gregan  <kinetik@orcon.net.nz>
+
+	* cmd_merging.cc (CMD(merge_into_workspace)): N() out if user is
+f	trying to merge in the workspace's current revision.
+	* tests/merge_into_workspace_same_rev/*: New test.
+	* testsuite.lua: Add it.
+
 2006-09-25  Zack Weinberg  <zackw@panix.com>
 
 	* work.cc (workspace::get_work_rev): Fold into sole caller,
